--- a/style.css
+++ b/style.css
@@ -84,15 +84,21 @@ body {
   margin: .5rem;
   background: none;
   border: none;
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   border-radius: 30px;
   cursor: pointer;
   font-weight: bold;
   color: #585858;
+  transition: all 0.2s ease-in;
+}
+.sides button:hover, .drinks button:hover {
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+  transition: all 0.2s ease-out;
 }
 
 button.active {
   background: #1eb2aa;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   color: white;
 }
 
@@ -105,10 +111,14 @@ button.active {
   padding: 1rem 0;
   background: tomato;
   border: none;
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   color: white;
   cursor: pointer;
   border-radius: 30px;
   font-weight: bolder;
   transition: all 0.75s ease-out;
+}
+.purchase button:hover {
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+  transition: all 0.2s ease-out;
 }
