--- a/style.scss
+++ b/style.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "Sora", sans-serif;
   background: lightseagreen;
   min-height: 100vh;
   display: flex;
@@ -64,6 +64,7 @@ body {
   }
 
   h3 {
+    font-family: "Syne";
     font-size: 0.8rem;
     padding: 2rem 0rem;
     color: #585858;
@@ -80,13 +81,15 @@ body {
   transition: all 0.75s ease-out;
 
   button {
+    font-family: "Syne";
+    font-size: 13px;
     padding: 0.75rem 1.2rem;
     background: none;
     border: none;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     border-radius: 30px;
     cursor: pointer;
-    font-weight: bold;
+    font-weight: 600;
     color: #585858;
     transition: all 0.2s ease-in;
 
@@ -108,6 +111,8 @@ button.active {
   margin-bottom: 2rem;
 
   button {
+    font-family: "Sora";
+    font-size: 16px;
     width: 100%;
     padding: 1rem 0;
     background: tomato;
@@ -116,7 +121,7 @@ button.active {
     color: white;
     cursor: pointer;
     border-radius: 30px;
-    font-weight: bolder;
+    font-weight: 800;
     transition: all 0.75s ease-out;
 
     &:hover {
