--- a/style.scss
+++ b/style.scss
@@ -93,17 +93,17 @@ body {
     color: #585858;
     transition: all 0.2s ease-in;
 
+    .active {
+      background: #1eb2aa;
+      box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+      color: white;
+    }
+
     &:hover {
       box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
       transition: all 0.2s ease-out;
     }
   }
-}
-
-button.active {
-  background: #1eb2aa;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-  color: white;
 }
 
 .purchase {
