--- a/style.scss
+++ b/style.scss
@@ -81,7 +81,7 @@ body {
   transition: all 0.75s ease-out;
 
   button {
-    font-family: "Syne";
+    font-family: "Lato";
     font-size: 13px;
     padding: 0.75rem 1.2rem;
     background: none;
@@ -89,7 +89,7 @@ body {
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     border-radius: 30px;
     cursor: pointer;
-    font-weight: 600;
+    font-weight: 400;
     color: #585858;
     transition: all 0.2s ease-in;
 
